force-app/main/default/objects/lp_conversation__LivePersonConversation__c/fields/lp_conversation__AccountId__c.field-meta.xml
<CustomField>
    <fullName>lp_conversation__AccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A reference to the account the conversation is associated with.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>LivePersonConversations</relationshipLabel>
    <relationshipName>LivePersonConversations</relationshipName>
    <type>Lookup</type>
</CustomField>