force-app/main/default/objects/lp_conversation__LivePersonConversation__c/fields/lp_conversation__AI_Summary__c.field-meta.xml
<CustomField>
    <fullName>lp_conversation__AI_Summary__c</fullName>
    <label>AI Summary</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>