force-app/main/default/objects/lp_conversation__LivePersonConversation__c/fields/lp_conversation__BrandID__c.field-meta.xml
<CustomField>
    <fullName>lp_conversation__BrandID__c</fullName>
    <description>An external field that contains a unique identifier of the brand’s LivePerson account.</description>
    <label>Brand ID</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>