force-app/main/default/objects/lp_conversation__LivePersonConversation__c/fields/lp_conversation__CaseId__c.field-meta.xml
<CustomField>
    <fullName>lp_conversation__CaseId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>An optional reference to the support case, the conversation is related to.</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>LivePersonConversations</relationshipLabel>
    <relationshipName>LivePersonConversations</relationshipName>
    <type>Lookup</type>
</CustomField>