force-app/main/default/objects/lp_conversation__LivePersonConversation__c/fields/lp_conversation__Channel__c.field-meta.xml
<CustomField>
    <fullName>lp_conversation__Channel__c</fullName>
    <description>Indicates a channel that was used for the communication during a conversation.</description>
    <label>Engagement Channel</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>