force-app/main/default/objects/lp_conversation__LivePersonConversation__c/fields/lp_conversation__ContactId__c.field-meta.xml
<CustomField>
    <fullName>lp_conversation__ContactId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>A reference to the contact that represents one of the parties of the conversation, typically a customer.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>LivePersonConversations</relationshipLabel>
    <relationshipName>LivePersonConversations</relationshipName>
    <type>Lookup</type>
</CustomField>