force-app/main/default/objects/lp_conversation__LivePersonConversation__c/fields/lp_conversation__CSAT__c.field-meta.xml
<CustomField>
    <fullName>lp_conversation__CSAT__c</fullName>
    <description>The customer satisfaction score.</description>
    <label>CSAT Score</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>