force-app/main/default/objects/lp_conversation__LivePersonConversation__c/fields/lp_conversation__EndTime__c.field-meta.xml
<CustomField>
    <fullName>lp_conversation__EndTime__c</fullName>
    <description>A date and time when the conversation ended.</description>
    <label>End Time</label>
    <type>DateTime</type>
</CustomField>