force-app/main/default/objects/lp_conversation__LivePersonConversation__c/fields/lp_conversation__LeadId__c.field-meta.xml
<CustomField>
    <fullName>lp_conversation__LeadId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>An optional reference to the prospect or lead.</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>LivePersonConversations</relationshipLabel>
    <relationshipName>LivePersonConversations</relationshipName>
    <type>Lookup</type>
</CustomField>