force-app/main/default/objects/lp_conversation__LivePersonConversation__c/fields/lp_conversation__OpportunityId__c.field-meta.xml
<CustomField>
    <fullName>lp_conversation__OpportunityId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>An optional reference to the opportunity, which is the sale or pending deal.</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>LivePersonConversations</relationshipLabel>
    <relationshipName>LivePersonConversations</relationshipName>
    <type>Lookup</type>
</CustomField>