force-app/main/default/objects/lp_conversation__LivePersonConversation__c/fields/lp_conversation__ProductId__c.field-meta.xml
<CustomField>
    <fullName>lp_conversation__ProductId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>An optional reference to the product, the conversation is related to.</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>LivePersonConversations</relationshipLabel>
    <relationshipName>LivePersonConversations</relationshipName>
    <type>Lookup</type>
</CustomField>