force-app/main/default/objects/lp_conversation__LivePersonConversation__c/fields/lp_conversation__SkillName__c.field-meta.xml
<CustomField>
    <fullName>lp_conversation__SkillName__c</fullName>
    <description>Agent’s skill.</description>
    <label>Skill</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>