force-app/main/default/objects/lp_conversation__LivePersonConversation__c/fields/lp_conversation__StartTime__c.field-meta.xml
<CustomField>
    <fullName>lp_conversation__StartTime__c</fullName>
    <description>A date and time when the conversation started.</description>
    <label>Start Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>