force-app/main/default/objects/lp_conversation__LivePersonConversation__c/fields/lp_conversation__Status__c.field-meta.xml
<CustomField>
    <fullName>lp_conversation__Status__c</fullName>
    <description>The status of the conversation.</description>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OPEN</fullName>
            </value>
            <value>
                <fullName>CLOSE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>