force-app/main/default/objects/lp_conversation__LivePersonConversation__c/fields/lp_conversation__Transcript__c.field-meta.xml
<CustomField>
    <fullName>lp_conversation__Transcript__c</fullName>
    <description>A full transcript of the conversation.</description>
    <label>Transcript</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>