force-app/main/default/objects/lp_conversation__LivePersonConversation__c/listViews/lp_conversation__All.listView-meta.xml
<ListView>
    <fullName>lp_conversation__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>